--- a/app/code/Satoshi/Theme/view/frontend/layout/cms_noroute_index.xml
+++ b/app/code/Satoshi/Theme/view/frontend/layout/cms_noroute_index.xml
@@ -2,10 +2,14 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceBlock name="page.main.title" remove="true" />
+        <move element="page.main.title" destination="custom_404"/>
+        <move element="cms_noroute" destination="custom_404"/>
+        <move element="cms_page" destination="custom_404"/>
 
         <referenceContainer name="content">
-            <block name="custom_404" template="Satoshi_Theme::custom_404.phtml"/>
+            <container name="custom_404_container" htmlTag="div" htmlClass="custom-404-container contents">
+                <block name="custom_404" template="Satoshi_Theme::custom_404.phtml"/>
+            </container>
         </referenceContainer>
     </body>
 </page>
