INTERNAL-58: Remove liquid values

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -52,7 +52,7 @@ $imageUrl = $this->helper(Image::class)
         width="0"
         height="0"
         class="pointer-events-none invisible absolute hidden h-0 w-0 md:block"
-        src="{{ card_product.selected_or_first_available_variant.image | <?= $imageUrl ?> }}"
+        src="<?= $imageUrl ?>"
         alt=""
     >
 <?php endif; ?>
@@ -95,7 +95,7 @@ $imageUrl = $this->helper(Image::class)
 </div>
 
 <div class="relative mt-4 flex flex-col gap-1">
-    <div class="{{ class }} {% if isLarge %}col-span-2 md:col-auto{% endif %} card-product">
+    <div class="col-span-2 md:col-auto card-product">
         <article class="z-10 flex h-full w-full flex-col items-stretch justify-start overflow-hidden rounded-xl border-black border-opacity-50 text-start">
             <h2
                 class="w-[calc(100%-40px)] text-md truncate mt-2"
