INTERNAL-61: wrap content inside a div

--- a/app/code/Satoshi/Theme/view/frontend/templates/custom_404.phtml
+++ b/app/code/Satoshi/Theme/view/frontend/templates/custom_404.phtml
@@ -20,7 +20,9 @@ $content = $block->getChildHtml('cms_page') ?? $block->getChildHtml('cms_noroute
         <?= $title; ?>
     </p>
 
-    <?= $content ?>
+    <div>
+        <?= $content ?>
+    </div>
 </div>
 
 <script>
