INTERNAL-27: merge INTERNAL-58

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -96,8 +96,7 @@ $imageUrl = $this->helper(Image::class)
 
     <div class="relative mt-4 flex flex-col gap-1">
         <div class="col-span-2 md:col-auto card-product">
-            <article
-                class="z-10 flex h-full w-full flex-col items-stretch justify-start overflow-hidden rounded-xl border-black border-opacity-50 text-start">
+            <article class="z-10 flex h-full w-full flex-col items-stretch justify-start overflow-hidden rounded-xl border-black border-opacity-50 text-start">
                 <h2
                     class="w-[calc(100%-40px)] text-md truncate mt-2"
                     <?php if ($isAlpineTemplate) : ?>
