--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
@@ -8,8 +8,8 @@ use Magento\Framework\Pricing\Helper\Data as PricingHelper;
 
 $product = $block->getData('product');
 $customClass = $block->getData('class') ? " {$block->getData('class')}" : '';
-$isAlpineTemplate = (bool) $block->getData('isAlpineTemplate') ?? true;
-$isInline = (bool) $block->getData('isInline') ?? false;
+$isAlpineTemplate = (bool) $block->getData('isAlpineTemplate');
+$isInline = (bool) $block->getData('isInline');
 
 $objectManager = ObjectManager::getInstance();
 $pricingHelper = $objectManager->get(PricingHelper::class);
