--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -3,36 +3,50 @@
 declare(strict_types=1);
 
 use Magento\Catalog\Block\Product\View;
+use Magento\Framework\Escaper;
 
+/** @var Escaper $escaper */
 /** @var View $block */
+
+$images = $block->getGalleryImages()->getItems();
+$productName = $block->getProduct()->getName();
 ?>
 
 <div
-  class="md:content-wrapper relative z-30 mx-auto flex w-full flex-col justify-center gap-4 md:grid md:grid-cols-[1fr_250px] md:items-start md:gap-8 lg:grid-cols-[1fr_330px] xl:grid-cols-[1fr_400px] xl:gap-16"
+    class="md:content-wrapper relative z-30 mx-auto flex w-full flex-col justify-center gap-4 md:grid md:grid-cols-[1fr_250px] md:items-start md:gap-8 lg:grid-cols-[1fr_330px] xl:grid-cols-[1fr_400px] xl:gap-16"
 >
-  <!-- Desktop gallery -->
-  <div class="contents max-md:hidden">
-    <?= $block->getChildHtml('product.media') ?>
-  </div>
+    <!-- Desktop gallery -->
+    <div class="contents max-md:hidden">
+        <?= $block->getChildHtml('product.media') ?>
+    </div>
 
 
-  <!-- Product details -->
-  <div
-    class="product-details md:sticky md:top-[--scroll-top] md:pb-7"
-    x-sticky-scroll="
+    <!-- Product details -->
+    <div
+        class="product-details md:sticky md:top-[--scroll-top] md:pb-7"
+        x-sticky-scroll="
       {
         container: $refs.scrollContainer,
         top: $refs.scrollContainer ? (window.innerHeight > 1080 ? 24 : 72) : 90,
         bottom: $refs.scrollContainer ? (window.innerHeight > 1080 ? 300 : 100) : 24,
       }
     "
-  >
-    <!-- TODO: Render mobile first image -->
-    <?= $block->getChildHtml('product.details.info') ?>
-  </div>
+    >
+        <div class="w-full bg-red-50 md:hidden max-h-screen-75">
+            <img
+                alt="<?= $escaper->escapeJs($productName) ?>"
+                title="<?= $escaper->escapeJs($productName) ?>"
+                class=" inset-0 object-contain object-center w-full h-full m-auto"
+                loading="lazy"
+                src="<?= reset($images)['medium_image_url'] ?>"
+            />
 
-  <!-- Mobile Gallery -->
-  <div class="contents md:hidden">
-    <?= $block->getChildHtml('product.media') ?>
-  </div>
+        </div>
+        <?= $block->getChildHtml('product.details.info') ?>
+    </div>
+
+    <!-- Mobile Gallery -->
+    <div class="contents md:hidden">
+        <?= $block->getChildHtml('product.media') ?>
+    </div>
 </div>
