INTERNAL-53; refactor: rename getAvailableLanguages() to getAvailableStores(), and LanguageSelector class to StoreSelector

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/language-selector.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/language-selector.phtml
@@ -5,17 +5,17 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
-use Satoshi\Theme\ViewModel\LanguageSelector;
+use Satoshi\Theme\ViewModel\StoreSelector;
 
 /** @var Template $template */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
-/** @var LanguageSelector $languageViewModel */
+/** @var StoreSelector $storeViewModel */
 
-$languageViewModel = $viewModels->require(LanguageSelector::class);
-$languages = $languageViewModel->getAvailableLanguages();
-$currentLanguageCode = $languageViewModel->getCurrentLanguageCode();
-$defaultLanguageCode = $languageViewModel->getDefaultLanguageCode();
+$storeViewModel = $viewModels->require(StoreSelector::class);
+$languages = $storeViewModel->getAvailableStores();
+$currentLanguageCode = $storeViewModel->getCurrentLanguageCode();
+$defaultLanguageCode = $storeViewModel->getDefaultLanguageCode();
 
 $options = [];
 foreach ($languages as $key => $language) {
