INTERNAL-9; remove hyva copyrights comment

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -1,14 +1,7 @@
 <?php
 /**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- *
  *  Custom Modifications:
- *      - Added 'data-content-wrapper' attribute.
- *      - Added 'pagination-content' and 'end-pagination-content' comments.
- *      - Added a conditional check to render pagination only when needed (as I got an error when I tried to remove its block from .xml file).
+ *      - extended to customize pagination.
  */
 
 declare(strict_types=1);
