--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -62,6 +62,12 @@ h3 {
   }
 }
 
+p[data-spam-detection-disclaimer] {
+  a {
+    @apply underline;
+  }
+}
+
 [x-cloak] {
   display: none !important;
 }
